--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "CheddarKit/Vendor/Reachability"]
 	path = CheddarKit/Vendor/Reachability
 	url = https://github.com/samsoffes/Reachability.git
+[submodule "CheddarKit/Vendor/AFNetworking"]
+	path = CheddarKit/Vendor/AFNetworking
+	url = https://github.com/AFNetworking/AFNetworking.git
